[package]
name = "tdao-referenda-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
chrono = "0.4"
hex = "0.4"
anyhow = "1.0"
sp-core = "35.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"



